# cigale-timesheet

./: .gitignore  Email.hs  Event.hs  Ical.hs  LICENSE.txt  README.md  Setup.hs  Svn.hs  TODO.txt  Timesheet.hs  Util.hs  cigale-timesheet-epiphany-template.desktop  cigale-timesheet.cabal  cigale-timesheet.desktop  config.html  elm-runtime.js  index.html  install.sh  install.txt  stack.yaml  timesheet.cabal  timesheet.elm
src/: Config.hs  Email.hs  Event.hs  EventProvider.hs  Git.hs  Hg.hs  Ical.hs  Main.hs  Redmine.hs  Settings.hs  Skype.hs  Svn.hs  Timesheet.hs  Util.hs  compile.txt  config.json  config.json.win  run.txt
src/App/: Config.hs  Main.hs  Timesheet.hs
src/App2/: FayApp.hs  FayApp.html  FayApp.js  FayConfig.hs  FayConfig.html  INSTALL.txt  Knockout.hs  T  Utils.hs  index.html
src/EventProviders/: Email.hs  Event.hs  EventProvider.hs  EventProviderSettings.hs  EventProviders.hs  FayAeson.hs  Git.hs  Hg.hs  Ical.hs  Redmine.hs  Skype.hs  Slack.hs  Svn.hs  Util.hs
src/Shared/: Communication.hs  EventProvider.hs  TsEvent.hs
src/WebClient/: FayApp.hs  FayApp.html  FayConfig.hs  FayConfig.html  FilePicker.hs  FilePickerModal.html  Knockout.hs  Utils.hs
src/WebGui/: App.hs  Common.hs  Config.hs  ConfigWidgets.hs  EventsView.hs  FilePicker.hs  stack.yaml  update-web.sh  web-gui.cabal
src/WebServer/: Communication.hs  Config.hs  FilePickerServer.hs  Main.hs  SnapUtil.hs  Timesheet.hs
tests/: EmailSpec.hs  EmailTests.hs  EventProviderSpec.hs  EventProviderTests.hs  EventProviderTestsData.hs  GitSpec.hs  GitTests.hs  HgSpec.hs  HgTests.hs  IcalSpec.hs  IcalTests.hs  RedmineSpec.hs  RedmineTests.hs  SkypeSpec.hs  SkypeTests.hs  Str.hs  StrSpec.hs  StrTests.hs  SvnSpec.hs  SvnTests.hs  TestUtil.hs  Tests.hs
