Name:                cigale-timesheet
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          etouzery@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Custom
Cabal-version:       >=1.8


Library
  hs-source-dirs: src/EventProviders
  Build-Depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson >= 0.6.2.0,
    rex,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    async,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    network,
    http-streams,
    dom-selector >= 0.1.0 && < 0.2.0,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    transformers,
    template-haskell,
    th-lift,
    unordered-containers,
    iconv,
-- after this line are build/install dependencies, not runtime dependencies!
    fay,
    fay-jquery,
    zip-archive >= 0.1.4
  exposed-modules:
    EventProviders,
    Event,
    EventProvider,
    Util,
    FayAeson
  other-modules:
    Redmine,
    Git,
    Svn,
    Hg,
    Email,
    Skype,
    Ical

Executable cigale-timesheet
  hs-source-dirs: src/App
  main-is: Main.hs
  Build-depends:
     base,
     cigale-timesheet,
     directory,
     text,
     bytestring,
     vector,
     unordered-containers,
     aeson >= 0.6.2.0,
     async,
     time,
     transformers,
     snap-core,
     snap-server,
     blaze-html

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -funbox-strict-fields -O2

test-suite        tests
   type:            exitcode-stdio-1.0

  hs-source-dirs: src/EventProviders, tests
  main-is: Tests.hs

  Build-depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson,
    rex,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    unordered-containers,
    vector,
    network,
    http-streams,
    dom-selector >= 0.1.0 && < 0.2.0,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    hspec,
    HUnit,
    template-haskell,
    transformers,
    th-lift,
    iconv
