Name:                cigale-timesheet
Version:             0.1
Synopsis:            Timesheet helper
Description:         Reverse-engineer your timesheet from records of your past
                     activity left in your computer.
License:             MIT
License-file:        LICENSE.txt
Author:              Emmanuel Touzery
Maintainer:          etouzery@gmail.com
Stability:           Experimental
Category:            Tools
Build-type:          Custom
Cabal-version:       >=1.8


Library
  hs-source-dirs: src/EventProviders
  Build-Depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson >= 0.7.0.0,
    -- i don't use any rex 0.4 feature but it added a constraint on
    -- the haskell-src-meta dependency which prevents cabal to pick too old versions
    rex >= 0.4,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory >= 1.2.0.0,
    async,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    network,
    http-streams,
    dom-selector >= 0.2.0.1,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    transformers,
    template-haskell,
    th-lift,
    unordered-containers,
    iconv,
-- after this line are build/install dependencies, not runtime dependencies!
    -- fay-base need mapM, unless
    fay >= 0.19,
    fay-jquery,
    zip-archive >= 0.1.4,
    errors
  exposed-modules:
    EventProviders,
    Event,
    EventProvider,
    Util,
    FayAeson
  other-modules:
    Redmine,
    Git,
    Svn,
    Hg,
    Email,
    Skype,
    Ical

Executable cigale-timesheet
  hs-source-dirs: src/WebServer
  main-is: Main.hs
  Build-depends:
     base,
     cigale-timesheet,
     process,
     directory,
     text,
     bytestring,
     vector,
     unordered-containers,
     aeson >= 0.7.0.0,
     async,
     time,
     transformers,
     snap-core,
     snap-server,
     blaze-html,
    -- i don't use any rex 0.4 feature but it added a constraint on
    -- the haskell-src-meta dependency which prevents cabal to pick too old versions
     rex >= 0.4,
     HTTP,
     filepath,
     parsec,
     errors,
     either,
     mtl

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -funbox-strict-fields -O2

test-suite        tests
   type:            exitcode-stdio-1.0

  hs-source-dirs: src/EventProviders, tests
  main-is: Tests.hs

  Build-depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson >= 0.7.0.0,
    -- i don't use any rex 0.4 feature but it added a constraint on
    -- the haskell-src-meta dependency which prevents cabal to pick too old versions
    rex >= 0.4,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    unordered-containers,
    vector,
    network,
    http-streams,
    dom-selector >= 0.2.0.1,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    hspec,
    HUnit,
    template-haskell,
    transformers,
    th-lift,
    iconv,
    errors
