Name:                cigale-timesheet
Version:             0.1
Synopsis:            Timesheet helper
Description:         Reverse-engineer your timesheet from records of your past
                     activity left in your computer.
License:             MIT
License-file:        LICENSE.txt
Author:              Emmanuel Touzery
Maintainer:          etouzery@gmail.com
Stability:           Experimental
Category:            Tools
Build-type:          Custom
Cabal-version:       >=1.8


Library
  hs-source-dirs:
    src/EventProviders
    src/Shared
  Build-Depends:
    base,
    bytestring >= 0.10.0.0,
    MonadCatchIO-transformers,
    mtl,
    aeson >= 0.7.0.0,
    codec-mbox,
    text,
    -- using parseTimeM, parseTime deprecated in 1.5
    time >= 1.5,
    parsec,
    containers,
    MissingH,
    process,
    directory >= 1.2.0.0,
    async,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    network,
    http-streams,
    dom-selector >= 0.2.0.1,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    -- openssl-streams => HsOpenSSL>=0.10.3 && <0.12)
    HsOpenSSL < 0.12,
    transformers,
    template-haskell,
    th-lift,
    unordered-containers,
    iconv,
-- after this line are build/install dependencies, not runtime dependencies!
    zip-archive >= 0.1.4,
    errors >= 2.0.0,
    http-types
  exposed-modules:
    EventProviders,
    TsEvent,
    EventProvider,
    Util,
    Communication
  other-modules:
    Redmine,
    Git,
    Svn,
    Hg,
    Email,
    Skype,
    Ical

Executable cigale-timesheet
  hs-source-dirs:
    src/WebServer
  main-is: Main.hs
  other-modules:
     Config
     FilePickerServer
     Paths_cigale_timesheet
     SnapUtil
     Timesheet
  Build-depends:
     base,
     cigale-timesheet,
     process,
     directory,
     text,
     bytestring >= 0.10.0.0,
     vector,
     unordered-containers,
     aeson >= 0.7.0.0,
     async,
     -- using parseTimeM, parseTime deprecated in 1.5
     time >= 1.5,
     transformers,
     snap-core,
     snap-server,
     http-types,
     blaze-html,
     HTTP,
     filepath,
     parsec,
     errors >= 2.0.0,
     either,
     mtl,
     MissingH,
     SafeSemaphore
  ghc-options: -threaded -Wall -funbox-strict-fields -O2
               -fno-warn-unused-do-bind

test-suite        tests
   type:            exitcode-stdio-1.0

  hs-source-dirs: src/EventProviders, src/Shared, tests
  main-is: Tests.hs
  other-modules:
    Email
    EmailSpec
    EventProvider
    EventProviderSpec
    EventProviderTestsData
    Git
    GitSpec
    Hg
    HgSpec
    Ical
    IcalSpec
    Redmine
    RedmineSpec
    Skype
    SkypeSpec
    Str
    StrSpec
    Svn
    SvnSpec
    TestUtil
    TsEvent
    Util
  Build-depends:
    base,
    bytestring >= 0.10.0.0,
    MonadCatchIO-transformers,
    mtl,
    aeson >= 0.7.0.0,
    codec-mbox,
    text,
    -- using parseTimeM, parseTime deprecated in 1.5
    time >= 1.5,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    ghc-prim,
    attoparsec,
    old-locale,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    unordered-containers,
    vector,
    network,
    http-streams,
    dom-selector >= 0.2.0.1,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    -- openssl-streams => HsOpenSSL>=0.10.3 && <0.12)
    HsOpenSSL < 0.12,
    hspec,
    HUnit,
    template-haskell,
    transformers,
    th-lift,
    iconv,
    errors >= 2.0.0,
    http-types
