Name:                timesheet
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          etouzery@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8


Library
  hs-source-dirs: src/EventProviders
  Build-Depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson,
    rex,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    async,
    ghc-prim,
    attoparsec,
    old-locale,
    text-icu,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    network,
    http-streams,
    dom-selector,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    transformers
  exposed-modules:
    EventProviders,
    Event,
    EventProvider,
    Util
  other-modules:
    Redmine,
    Git,
    Svn,
    Hg,
    Email,
    Skype,
    Ical

Executable timesheet
  hs-source-dirs: src/App
  main-is: Main.hs
  Build-depends:
     base,
     timesheet,
     directory,
     text,
     bytestring,
     vector,
     unordered-containers,
     aeson,
     async,
     time,
     transformers,
     snap-core,
     snap-server

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -funbox-strict-fields -O2

test-suite        tests
   type:            exitcode-stdio-1.0

  hs-source-dirs: src/EventProviders, tests
  main-is: Tests.hs

  Build-depends:
    base,
    bytestring,
    MonadCatchIO-transformers,
    mtl,
    aeson,
    rex,
    codec-mbox,
    text,
    time,
    parsec,
    containers,
    MissingH,
    process,
    directory,
    ghc-prim,
    attoparsec,
    old-locale,
    text-icu,
    base64-bytestring,
    HDBC,
    HDBC-sqlite3,
    unordered-containers,
    vector,
    network,
    http-streams,
    dom-selector,
    blaze-builder,
    io-streams,
    html-conduit,
    xml-conduit,
    HsOpenSSL,
    hspec,
    HUnit,
    template-haskell,
    transformers
