Name:                web-gui
Version:             0.1
Synopsis:            Timesheet helper
Description:         Reverse-engineer your timesheet from records of your past
                     activity left in your computer: GUI frontend.
License:             MIT
License-file:        ../../LICENSE.txt
Author:              Emmanuel Touzery
Maintainer:          etouzery@gmail.com
Stability:           Experimental
Category:            Tools
Build-type:          Simple
Cabal-version:       >=1.8

Executable cigale-web
   hs-source-dirs:
       .,
       ../Shared
   main-is: App.hs
   build-depends:
       base,
       reflex,
       reflex-dom,
       ghcjs-dom == 0.1.*,
       ghcjs-base,
       time,
       text,
       aeson,
       transformers,
       containers,
       unordered-containers,
       dependent-sum,
       bytestring,
       errors,
       filepath,
       -- not really a fan of the next two, not really needed on the client.
       template-haskell,
       th-lift,
       clay
   js-sources:
        ../../lib/node_modules/pikaday/pikaday.js
        ../../lib/node_modules/jquery/dist/jquery.min.js
        ../../lib/node_modules/bootstrap/dist/js/bootstrap.min.js
   ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
